test: copertura DTO auth e nuove suite frontend (pratiche, ricerca, ticket). e2e: aggiungi Playwright login smoke test e config dedicata

--- a/apps/backend/env.example
+++ b/apps/backend/env.example
@@ -50,6 +50,8 @@ JWT_EXPIRATION=7d
 UPLOAD_DIR=./uploads
 MAX_FILE_SIZE=10485760
 # 10MB in bytes (10 * 1024 * 1024)
+UPLOAD_DOCUMENT_MAX_MB=50
+# Limite per upload documenti lato backend (MB). Default 50.
 
 # ===================================
 # Email Configuration (opzionale)
