--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,14 @@ jobs:
         working-directory: apps/frontend
         run: npm run test
 
+      - name: Install Playwright browsers
+        working-directory: apps/frontend
+        run: npx playwright install --with-deps
+
+      - name: Run frontend E2E (Playwright)
+        working-directory: apps/frontend
+        run: npm run e2e
+
       - name: Build backend Docker image
         uses: docker/build-push-action@v4
         with:
