--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -10,6 +10,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY ./src ./src
+COPY ./data-source.ts ./data-source.ts
 COPY tsconfig*.json ./
 COPY nest-cli.json ./
 COPY scripts ./scripts
@@ -19,8 +20,13 @@ FROM node:20-alpine AS runner
 WORKDIR /usr/src/app
 
 COPY package*.json ./
-RUN npm install --production
+# Usa i node_modules già installati (dev + prod) dal builder
+COPY --from=builder /usr/src/app/node_modules ./node_modules
 COPY --from=builder /usr/src/app/dist ./dist
+COPY --from=builder /usr/src/app/src ./src
+COPY --from=builder /usr/src/app/data-source.ts ./data-source.ts
+COPY --from=builder /usr/src/app/tsconfig*.json ./
+COPY --from=builder /usr/src/app/nest-cli.json ./
 COPY --from=builder /usr/src/app/scripts/start-with-migrations.sh ./start-with-migrations.sh
 
 RUN chmod +x ./start-with-migrations.sh
