--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -8,5 +8,6 @@ RUN npm run build
 
 FROM nginx:1.25-alpine AS runner
 COPY --from=builder /usr/src/app/dist /usr/share/nginx/html
-EXPOSE 4173
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
