--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -34,11 +34,13 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.3",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/ioredis": "^4.28.10",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "csv-parse": "^5.6.0",
     "exceljs": "^4.4.0",
+    "ioredis": "^5.8.2",
     "mysql2": "^3.15.3",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
