--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,6 +11,7 @@
     "test": "vitest --reporter=verbose",
     "test:watch": "vitest --watch",
     "e2e": "playwright test",
+    "e2e:docker": "playwright test --config=playwright.config.docker.ts",
     "e2e:report": "playwright show-report"
   },
   "dependencies": {
