--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,10 @@ services:
     container_name: resolvo-mysql
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: root!
-      MYSQL_DATABASE: recupero_crediti
-      MYSQL_USER: rc_user
-      MYSQL_PASSWORD: rc_pass
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     ports:
       - "3306:3306"
     volumes:
@@ -21,7 +21,7 @@ services:
       - resolvo-network
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot!"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -55,36 +55,45 @@ services:
     container_name: resolvo-backend
     restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "${BACKEND_PORT:-3000}:3000"
     environment:
       # Application
-      NODE_ENV: production
+      NODE_ENV: ${NODE_ENV:-production}
       PORT: 3000
 
       # Database (usa nome servizio 'mysql' come host)
-      DB_HOST: mysql
-      DB_PORT: 3306
-      DB_USERNAME: rc_user
-      DB_PASSWORD: rc_pass
-      DB_DATABASE: recupero_crediti
+      DB_HOST: ${DB_HOST:-mysql}
+      DB_PORT: ${DB_PORT:-3306}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_DATABASE: ${DB_DATABASE}
 
       # JWT
-      JWT_SECRET: your-super-secret-jwt-key-change-this-in-production-12345678
-      JWT_EXPIRATION: 7d
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRATION: ${JWT_EXPIRES_IN:-7d}
 
       # Uploads
       UPLOAD_DIR: /app/uploads
-      MAX_FILE_SIZE: 10485760
+      MAX_FILE_SIZE: ${MAX_FILE_SIZE:-10485760}
       SKIP_MIGRATIONS: "false"
 
       # Redis (opzionale)
       REDIS_HOST: redis
       REDIS_PORT: 6379
 
-      # Frontend URL (opzionale - auto-detect funziona)
-      # FRONTEND_URL: http://3.120.81.201
+      # CORS Origins
+      CORS_ORIGINS: ${CORS_ORIGINS}
+
+      # Rate Limiting
+      RATE_LIMIT_TTL: ${RATE_LIMIT_TTL:-60000}
+      RATE_LIMIT_MAX: ${RATE_LIMIT_MAX:-300}
+
+      # Backup Configuration
+      BACKUP_SCHEDULE_INTERVAL: ${BACKUP_SCHEDULE_INTERVAL:-86400000}
+      BACKUP_MAX_COUNT: ${BACKUP_MAX_COUNT:-30}
     volumes:
       - ./apps/backend/uploads:/app/uploads
+      - ./backups:/usr/src/app/backups
     depends_on:
       mysql:
         condition: service_healthy
@@ -107,14 +116,14 @@ services:
       context: ./apps/frontend
       dockerfile: Dockerfile
       args:
-        # Build-time variables (opzionale - auto-detect funziona)
-        # VITE_API_URL: http://3.120.81.201:3000
+        # Build-time variables
+        VITE_API_URL: ${VITE_API_URL:-}
         VITE_APP_NAME: RESOLVO
         VITE_APP_VERSION: 1.0.0
     container_name: resolvo-frontend
     restart: unless-stopped
     ports:
-      - "5173:80"
+      - "${FRONTEND_PORT:-5173}:80"
     depends_on:
       - backend
     networks:
