--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -48,7 +48,9 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.28"
+    "typeorm": "^0.3.28",
+    "winston": "^3.11.0",
+    "@sentry/node": "^7.109.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
